update background in froentend

--- a/FRS_attendance/templates/face-1.html
+++ b/FRS_attendance/templates/face-1.html
@@ -87,22 +87,14 @@
 
         <div class="col-sm p-3 min-vh-100">
             <div class="row">
-                <main class="col-md-8 d-flex justify-content-center align-items-center">
+                <main class="col-md-8 d-flex justify-content-center align-items-center full-screen">
                     <div id="video-container" class="text-center">
-                        <video id="webcam" autoplay playsinline class="w-100"></video>
+                        <video id="webcam" autoplay playsinline class="w-300" class="h-90"></video>
                         <button id="capture-button" class="btn btn-primary mt-3">Register Face</button>
                         <button id="mark-attendance-button" class="btn btn-success mt-3 d-none">Mark Attendance</button>
                         <div id="message" class="alert alert-info mt-3 d-none"></div>
                     </div>
                 </main>
-{#                <aside class="col-md-4">#}
-{#                    <div class="card p-3">#}
-{#                        <h3>Student Details</h3>#}
-{#                        <p>Name: John Doe</p>#}
-{#                        <p>ID: 123456</p>#}
-{#                        <p>Class: 10A</p>#}
-{#                    </div>#}
-{#                </aside>#}
             </div>
         </div>
     </div>
