--- a/signup/templates/SignUp.html
+++ b/signup/templates/SignUp.html
@@ -14,7 +14,7 @@
 <!---nav bar-->
 <nav class="navbar bg-transparent navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="VVIT_logo.svg" alt="logo" width="50%"> </a>
+        <a class="navbar-brand" href="#"><img src="{% static 'images/VVIT_logo.svg' %}" alt="logo" width="50%"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
