--- a/dashboard/templates/feedback.html
+++ b/dashboard/templates/feedback.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 <li class="nav-item back1">
-                    <a class="nav-link " href="{% url 'signup' %}">SignUp</a>
+                    <a class="nav-link " href="{% url 'user_administration:register' %}">SignUp</a>
                 </li>
                 <li class="nav-item back1">
                     <a class="nav-link " href="">FAQ</a>
