removed Signup nav-btn

--- a/FRS_attendance/templates/face-1.html
+++ b/FRS_attendance/templates/face-1.html
@@ -25,9 +25,9 @@
                 <li class="nav-item">
                     <a class="nav-link back1" href="#">Login</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link back1" href="#">SignUp</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link back1" href="#">SignUp</a>#}
+{#                </li>#}
                 <li class="nav-item">
                     <a class="nav-link back1" href="#">FAQ</a>
                 </li>
