--- a/FRS_attendance/templates/face-1.html
+++ b/FRS_attendance/templates/face-1.html
@@ -22,8 +22,8 @@
                 <li class="nav-item">
                     <a class="nav-link back1" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link back1" href="#">Login</a>
+                <li class="nav-item back1">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
 {#                <li class="nav-item">#}
 {#                    <a class="nav-link back1" href="#">SignUp</a>#}
