--- a/chatbot/templates/chatbot.html
+++ b/chatbot/templates/chatbot.html
@@ -120,7 +120,7 @@
                     <a class="nav-link " href="{% url 'dashboard' %}">Home</a>
                 </li>
                 <li class="nav-item back1">
-                    <a class="nav-link " href="Login_page.html">Login</a>
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
 {#                <li class="nav-item back1">#}
 {#                    <a class="nav-link " href="SignUp.html">SignUp</a>#}
