--- a/dashboard/templates/feedback.html
+++ b/dashboard/templates/feedback.html
@@ -36,9 +36,9 @@
                 <li class="nav-item back1">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
-                <li class="nav-item back1">
-                    <a class="nav-link " href="{% url 'signup' %}">SignUp</a>
-                </li>
+{#                <li class="nav-item back1">#}
+{#                    <a class="nav-link " href="{% url 'signup' %}">SignUp</a>#}
+{#                </li>#}
                 <li class="nav-item back1">
                     <a class="nav-link " href="">FAQ</a>
                 </li>
