--- a/lostAndFound/templates/basetemplate.html
+++ b/lostAndFound/templates/basetemplate.html
@@ -121,11 +121,8 @@
                     <a class="nav-link " href="{% url 'dashboard' %}">Home</a>
                 </li>
                 <li class="nav-item back1">
-                    <a class="nav-link " href="Login_page.html">Login</a>
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
-{#                <li class="nav-item back1">#}
-{#                    <a class="nav-link " href="SignUp.html">SignUp</a>#}
-{#                </li>#}
                 <li class="nav-item back1">
                     <a class="nav-link " href="#">FAQ</a>
                 </li>
